package com.greentree.engine.moon.render.texture.data;

/**
 * @author Arseny Latyshev
 *
 */
public enum Filtering {
	
	NEAREST(),
	LINEAR(),
	NEAREST_MIPMAP_NEAREST(),
	LINEAR_MIPMAP_NEAREST(),
	NEAREST_MIPMAP_LINEAR(),
	LINEAR_MIPMAP_LINEAR(),
	;

}
