package com.greentree.engine.moon.render.texture.data;

/**
 * @author Arseny Latyshev
 *
 */
public enum Wrapping {
	
	REPEAT(),
	MIRRORED_REPEAT(),
	CLAMP_TO_EDGE(),
	CLAMP_TO_BORDER(),
	;

}
